--- a/ansible/nginx.conf.j2
+++ b/ansible/nginx.conf.j2
@@ -30,6 +30,7 @@ http {
     location /oauth2/ {
       proxy_pass         http://oauth2-proxy:4180;
       proxy_http_version 1.1;
+
       proxy_set_header   Host              $host;
       proxy_set_header   X-Real-IP         $remote_addr;
       proxy_set_header   X-Forwarded-For   $proxy_add_x_forwarded_for;
@@ -37,6 +38,13 @@ http {
       proxy_set_header   X-Forwarded-Proto $x_forwarded_proto;
       proxy_set_header   X-Request-URI     $request_uri;
       proxy_set_header   X-Auth-Request-Redirect $request_uri;
+
+      # --- larger buffers for big Set-Cookie headers from oauth2-proxy ---
+      proxy_buffering           on;
+      proxy_buffer_size         128k;
+      proxy_buffers             8 256k;
+      proxy_busy_buffers_size   256k;
+      proxy_read_timeout        90s;
     }
 
     # Auth subrequest used by auth_request
